--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="images/icon.png"></h2>
+            <div class="row">
+                <input type="text" placeholder="Add your text" id="input-box">
+                <button>Add</button>
+            </div>
+        </div>
+        
+    </div>
     
 </body>
 </html>
