--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
                 <input type="text" placeholder="Add your text" id="input-box">
                 <button>Add</button>
             </div>
+
+            <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li> -->
+            </ul>
         </div>
+
         
     </div>
     
