--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>To-Do List <img src="images/icon.png"></h2>
             <div class="row">
                 <input type="text" placeholder="Add your text" id="input-box">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
 
             <ul id="list-container">
@@ -23,6 +23,7 @@
             </ul>
         </div>
 
+        <script src="script.js"></script>
         
     </div>
     
